--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -981,10 +981,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_x.subject.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_subjects=[]\n",
     "\n",
     "for subject in dfs.subject.unique():\n",
-    "     #\n",
+    "    #\n",
     "    ###################################################### get previous action of the magician and Reaction time respect it\n",
     "    prev_event=[]\n",
     "    times_after=[]\n",
@@ -1055,7 +1064,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_subjects=pd.concat(df_subjects)\n",
+    "df_subjects.head()"
+   ]
   },
   {
    "cell_type": "code",
