--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -15,18 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "## seleccionar truco\n",
-    "T='Truco 1'\n",
-    "trick_ = 1"
+    "T='Truco 2'\n",
+    "trick_ = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4 00:01:19     gag        \"El público de schroedinger\"       79     gag"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "4         1      5       38     1       1             3    24    m"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,19 +463,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Se', 'Si ', 'N', 'In', 'L', 'I', 'S', 'a', 'F', 'C', 'A', 'R',\n",
-       "       'P', 'D', 'Si', 'M', '  C', 'AA', 'O', 'O ', 'A+', 'AA+', 'B',\n",
-       "       'a+', 'In ', 'PV', 'L ', 'C ', 'I   ', 'O  ', 'In   '],\n",
+       "array(['N', 'S', 'a', 'Se', 'B', 'L', 'In', 'R', 'Si', 'A', 'D', 'P', 'C',\n",
+       "       'F', 'M', 'T', 'O', 'A+', 'a+', 'I', 'M (VP)', 'N ', 'In '],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,17 +512,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Se', 'Si', 'N', 'In', 'L', 'I', 'S', 'a', 'F', 'C', 'A', 'R', 'P',\n",
-       "       'D', 'M', 'AA', 'O', 'A+', 'AA+', 'B', 'a+', 'PV'], dtype=object)"
+       "array(['N', 'S', 'a', 'Se', 'B', 'L', 'In', 'R', 'Si', 'A', 'D', 'P', 'C',\n",
+       "       'F', 'M', 'T', 'O', 'A+', 'a+', 'I', 'M (VP)'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
