--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -456,13 +456,12 @@
        "31  00:01:02    In      62      1        1"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "list_columns_subjects = list(Df.columns)\n",
     "list_columns_subjects.remove('tiempo')\n",
     "\n",
@@ -501,7 +500,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Se', 'Si ', 'N', 'In', 'L', 'N*', 'I', 'L*', 'S', 'a1', 'F', 'C',\n",
+       "       'S*', 'A8', 'A7', 'R', 'P', 'Si', 'a4', 'M', 'a3', 'D', '  C',\n",
+       "       'AA10', 'A5', 'O', 'O*', 'O ', 'A+6', 'A+7', 'AA+10', 'A6', 'B',\n",
+       "       'A+9', 'A+5', 'a+3', 'In ', 'a2', 'A9', 'PV', 'AA11', 'L ', 'C ',\n",
+       "       'A08', 'a+2', 'A4', 'I   ', 'O  ', 'In   ', 'T', 'a+4', 'A+8',\n",
+       "       'VP', 'N ', 'a5', 'p', 'S ', 'P ', 'F  ', 'M  ', 'N  ', 'P*',\n",
+       "       'A+1', 'AA+11', 'AA+13', 'AA+12', 'AA+14', 'A1', 'R ', 'AA+17',\n",
+       "       'IN', 'A3', 'A 1', 'AA12', 'D*', 'I*', 'SI', 'VP ', 'S  ', 'AA1',\n",
+       "       'L  ', 'A0', 'F ', 'AA14', 'AA19', 'N* ', 'AA15', 'A13', 'AA16',\n",
+       "       'A15', 'A12', 'AA+19', 'A+18', 'AA+27', 'AA27', 'AA26', 'A+26',\n",
+       "       'AA28', 'A+25', 'AA+28', 'AA+26', 'a7', 'A11', 'AA23', 'AA+25',\n",
+       "       'A19', 'a8', 'AA+24', 'AA+18', 'AA+23', 'a6'], dtype=object)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs.event.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs['event'] = dfs['event'].replace(['L '], ['L'])\n",
+    "dfs['event'] = dfs['event'].replace(['L  '], ['L'])\n",
+    "dfs['event'] = dfs['event'].replace(['Si '], ['Si'])\n",
+    "dfs['event'] = dfs['event'].replace(['SI'], ['Si'])\n",
+    "dfs['event'] = dfs['event'].replace(['O '], ['O'])\n",
+    "dfs['event'] = dfs['event'].replace(['O  '], ['O'])\n",
+    "dfs['event'] = dfs['event'].replace(['In '], ['In'])\n",
+    "dfs['event'] = dfs['event'].replace(['In  '], ['In'])\n",
+    "dfs['event'] = dfs['event'].replace(['In   '], ['In'])\n",
+    "dfs['event'] = dfs['event'].replace(['IN'], ['In'])\n",
+    "dfs['event'] = dfs['event'].replace(['I  '], ['I'])\n",
+    "dfs['event'] = dfs['event'].replace(['I   '], ['I'])\n",
+    "dfs['event'] = dfs['event'].replace(['C '], ['C'])\n",
+    "dfs['event'] = dfs['event'].replace(['  C'], ['C'])\n",
+    "dfs['event'] = dfs['event'].replace(['In '], ['In'])\n",
+    "dfs['event'] = dfs['event'].replace(['N '], ['N'])\n",
+    "dfs['event'] = dfs['event'].replace(['N  '], ['N'])\n",
+    "dfs['event'] = dfs['event'].replace(['N*  '], ['N*'])\n",
+    "dfs['event'] = dfs['event'].replace(['VP '], ['VP'])\n",
+    "dfs['event'] = dfs['event'].replace(['PV'], ['VP'])\n",
+    "dfs['event'] = dfs['event'].replace(['S '], ['S'])\n",
+    "dfs['event'] = dfs['event'].replace(['S  '], ['S'])\n",
+    "dfs['event'] = dfs['event'].replace(['F '], ['F'])\n",
+    "dfs['event'] = dfs['event'].replace(['F  '], ['F'])\n",
+    "dfs['event'] = dfs['event'].replace(['P '], ['P'])\n",
+    "dfs['event'] = dfs['event'].replace(['p'], ['P'])\n",
+    "dfs['event'] = dfs['event'].replace(['p*'], ['P*'])\n",
+    "dfs['event'] = dfs['event'].replace(['M '], ['M'])\n",
+    "dfs['event'] = dfs['event'].replace(['M  '], ['M'])\n",
+    "dfs['event'] = dfs['event'].replace(['R '], ['R'])\n",
+    "dfs['event'] = dfs['event'].replace(['A 1'], ['A1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Se', 'Si', 'N', 'In', 'L', 'N*', 'I', 'L*', 'S', 'a1', 'F', 'C',\n",
+       "       'S*', 'A8', 'A7', 'R', 'P', 'a4', 'M', 'a3', 'D', 'AA10', 'A5',\n",
+       "       'O', 'O*', 'A+6', 'A+7', 'AA+10', 'A6', 'B', 'A+9', 'A+5', 'a+3',\n",
+       "       'a2', 'A9', 'VP', 'AA11', 'A08', 'a+2', 'A4', 'T', 'a+4', 'A+8',\n",
+       "       'a5', 'P*', 'A+1', 'AA+11', 'AA+13', 'AA+12', 'AA+14', 'A1',\n",
+       "       'AA+17', 'A3', 'AA12', 'D*', 'I*', 'AA1', 'A0', 'AA14', 'AA19',\n",
+       "       'N* ', 'AA15', 'A13', 'AA16', 'A15', 'A12', 'AA+19', 'A+18',\n",
+       "       'AA+27', 'AA27', 'AA26', 'A+26', 'AA28', 'A+25', 'AA+28', 'AA+26',\n",
+       "       'a7', 'A11', 'AA23', 'AA+25', 'A19', 'a8', 'AA+24', 'AA+18',\n",
+       "       'AA+23', 'a6'], dtype=object)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs.event.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +704,7 @@
        "4  00:01:02    In      62      1        1         1"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,6 +767,83 @@
     "\n",
     "df_subjects=pd.concat(df_subjects)\n",
     "df_subjects.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Se', 'Si ', 'N', 'In', 'L', 'I', 'S', 'a', 'F', 'C', 'A', 'B',\n",
+       "       'R', 'Si', 'O', 'D', 'P', 'In ', 'M', 'S ', '  C', 'AA', 'P ',\n",
+       "       'A+', 'a+', 'AA+', 'O ', 'T', 'p', 'VP', 'N ', 'VP ', 'S  ', 'PV',\n",
+       "       'N* ', 'CF', 'R ', 'L  ', 'F?', 'L ', 'C ', 'RS', 'F  ', 'IN',\n",
+       "       'R,', 'I   ', 'F ', 'SI', 'A ', 'X', 'S(B)', 'O  ', 'S,D', 'R,F',\n",
+       "       'R,D', 'M  ', 'In   ', 'N  '], dtype=object)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_subjects.event.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##correct wrong event labels\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['L '], ['L'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['L  '], ['L'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['Si '], ['Si'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['O '], ['O'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['O  '], ['O'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['In '], ['In'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['In  '], ['In'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['In   '], ['In'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['I  '], ['I'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['I   '], ['I'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['C '], ['C'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['  C'], ['C'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['In '], ['In'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['N '], ['N'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['N  '], ['N'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['VP '], ['VP'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['S '], ['S'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['S  '], ['S'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['F '], ['F'])\n",
+    "df_subjects['event'] = df_subjects['event'].replace(['F  '], ['F'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Se', 'Si', 'N', 'In', 'L', 'I', 'S', 'a', 'F', 'C', 'A', 'B', 'R',\n",
+       "       'O', 'D', 'P', 'M', 'AA', 'P ', 'A+', 'a+', 'AA+', 'T', 'p', 'VP',\n",
+       "       'PV', 'N* ', 'CF', 'R ', 'F?', 'RS', 'F  ', 'IN', 'R,', 'SI', 'A ',\n",
+       "       'X', 'S(B)', 'S,D', 'R,F', 'R,D', 'M  '], dtype=object)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_subjects.event.unique()"
    ]
   },
   {
