--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -343,20 +343,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
    "outputs": [
@@ -531,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,6 +538,7 @@
     "dfs['event'] = dfs['event'].replace(['In '], ['In'])\n",
     "dfs['event'] = dfs['event'].replace(['N '], ['N'])\n",
     "dfs['event'] = dfs['event'].replace(['N  '], ['N'])\n",
+    "dfs['event'] = dfs['event'].replace(['N* '], ['N*'])\n",
     "dfs['event'] = dfs['event'].replace(['N*  '], ['N*'])\n",
     "dfs['event'] = dfs['event'].replace(['VP '], ['VP'])\n",
     "dfs['event'] = dfs['event'].replace(['PV'], ['VP'])\n",
@@ -570,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -582,13 +569,13 @@
        "       'a2', 'A9', 'VP', 'AA11', 'A08', 'a+2', 'A4', 'T', 'a+4', 'A+8',\n",
        "       'a5', 'P*', 'A+1', 'AA+11', 'AA+13', 'AA+12', 'AA+14', 'A1',\n",
        "       'AA+17', 'A3', 'AA12', 'D*', 'I*', 'AA1', 'A0', 'AA14', 'AA19',\n",
-       "       'N* ', 'AA15', 'A13', 'AA16', 'A15', 'A12', 'AA+19', 'A+18',\n",
-       "       'AA+27', 'AA27', 'AA26', 'A+26', 'AA28', 'A+25', 'AA+28', 'AA+26',\n",
-       "       'a7', 'A11', 'AA23', 'AA+25', 'A19', 'a8', 'AA+24', 'AA+18',\n",
-       "       'AA+23', 'a6'], dtype=object)"
+       "       'AA15', 'A13', 'AA16', 'A15', 'A12', 'AA+19', 'A+18', 'AA+27',\n",
+       "       'AA27', 'AA26', 'A+26', 'AA28', 'A+25', 'AA+28', 'AA+26', 'a7',\n",
+       "       'A11', 'AA23', 'AA+25', 'A19', 'a8', 'AA+24', 'AA+18', 'AA+23',\n",
+       "       'a6'], dtype=object)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,21 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -698,13 +671,13 @@
       "text/plain": [
        "     tiempo event  time_s  trick  subject  duration\n",
        "0  00:00:06    Se       6      1        1         1\n",
-       "1  00:00:10   Si       10      1        1         1\n",
+       "1  00:00:10    Si      10      1        1         1\n",
        "2  00:00:12     N      12      1        1       102\n",
        "3  00:00:32    In      32      1        1         1\n",
        "4  00:01:02    In      62      1        1         1"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,73 +744,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Se', 'Si ', 'N', 'In', 'L', 'I', 'S', 'a', 'F', 'C', 'A', 'B',\n",
-       "       'R', 'Si', 'O', 'D', 'P', 'In ', 'M', 'S ', '  C', 'AA', 'P ',\n",
-       "       'A+', 'a+', 'AA+', 'O ', 'T', 'p', 'VP', 'N ', 'VP ', 'S  ', 'PV',\n",
-       "       'N* ', 'CF', 'R ', 'L  ', 'F?', 'L ', 'C ', 'RS', 'F  ', 'IN',\n",
-       "       'R,', 'I   ', 'F ', 'SI', 'A ', 'X', 'S(B)', 'O  ', 'S,D', 'R,F',\n",
-       "       'R,D', 'M  ', 'In   ', 'N  '], dtype=object)"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_subjects.event.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##correct wrong event labels\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['L '], ['L'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['L  '], ['L'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['Si '], ['Si'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['O '], ['O'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['O  '], ['O'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['In '], ['In'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['In  '], ['In'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['In   '], ['In'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['I  '], ['I'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['I   '], ['I'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['C '], ['C'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['  C'], ['C'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['In '], ['In'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['N '], ['N'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['N  '], ['N'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['VP '], ['VP'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['S '], ['S'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['S  '], ['S'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['F '], ['F'])\n",
-    "df_subjects['event'] = df_subjects['event'].replace(['F  '], ['F'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array(['Se', 'Si', 'N', 'In', 'L', 'I', 'S', 'a', 'F', 'C', 'A', 'B', 'R',\n",
-       "       'O', 'D', 'P', 'M', 'AA', 'P ', 'A+', 'a+', 'AA+', 'T', 'p', 'VP',\n",
-       "       'PV', 'N* ', 'CF', 'R ', 'F?', 'RS', 'F  ', 'IN', 'R,', 'SI', 'A ',\n",
-       "       'X', 'S(B)', 'S,D', 'R,F', 'R,D', 'M  '], dtype=object)"
+       "       'O', 'D', 'P', 'M', 'AA', 'A+', 'a+', 'AA+', 'T', 'VP'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,6 +763,207 @@
    "source": [
     "df_subjects.event.unique()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\David\\Anaconda3\\envs\\python3\\lib\\site-packages\\ipykernel_launcher.py:22: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tiempo</th>\n",
+       "      <th>event</th>\n",
+       "      <th>time_s</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>trick</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00:36:46</td>\n",
+       "      <td>S</td>\n",
+       "      <td>2206</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00:37:58</td>\n",
+       "      <td>S</td>\n",
+       "      <td>2278</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00:38:20</td>\n",
+       "      <td>S</td>\n",
+       "      <td>2300</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00:38:40</td>\n",
+       "      <td>S</td>\n",
+       "      <td>2320</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00:38:58</td>\n",
+       "      <td>S</td>\n",
+       "      <td>2338</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     tiempo event  time_s duration  subject  trick\n",
+       "0  00:36:46     S    2206        8        1      3\n",
+       "1  00:37:58     S    2278        8        1      3\n",
+       "2  00:38:20     S    2300        6        1      3\n",
+       "3  00:38:40     S    2320        8        1      3\n",
+       "4  00:38:58     S    2338       12        1      3"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Anotaciones de risa y sonrisa\n",
+    "\n",
+    "for T in trick_list:\n",
+    "    df_risa = pd.read_excel(os.getcwd() + '\\\\ANOTACIONES3.xlsx', sheet_name= T )\n",
+    "\n",
+    "    list_columns_subjects = list(df_risa.columns)\n",
+    "    list_columns_subjects.remove('Tiempo')\n",
+    "    list_columns_subjects=list_columns_subjects ## para ir comprobando, una a una, que no haya espacios vacíos!\n",
+    "\n",
+    "    df_subjects_risa=[]\n",
+    "\n",
+    "    for COL in list_columns_subjects:\n",
+    "        event_type = COL[0]\n",
+    "        subject = int(re.findall('\\d+', COL)[0])\n",
+    "        df_x=df_risa[['Tiempo', COL]]\n",
+    "        times_s=[]\n",
+    "        for i in range(0, len(df_x)):\n",
+    "            l = df_x.Tiempo.iloc[i]\n",
+    "            times_s.append( int(datetime.timedelta(hours=l.hour, minutes=l.minute, seconds=l.second).total_seconds())  )\n",
+    "        #\n",
+    "        df_x.columns=['tiempo', 'event']\n",
+    "        df_x['time_s'] = times_s\n",
+    "        ##########################################################\n",
+    "        #### get starts and durations\n",
+    "        counter=0\n",
+    "        starts=[]\n",
+    "        finals=[]\n",
+    "        for i in range(0, len(df_x)):\n",
+    "            if df_x.iloc[i, 1]==0:\n",
+    "                if counter==0:\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    finals.append([df_x.loc[i, 'tiempo'], df_x.loc[i, 'event'], df_x.loc[i, 'time_s']])\n",
+    "                    counter=0\n",
+    "            elif df_x.iloc[i, 1]==1:\n",
+    "                if counter==0:\n",
+    "                    starts.append([df_x.loc[i, 'tiempo'], df_x.loc[i, 'event'], df_x.loc[i, 'time_s']])\n",
+    "                counter+=1\n",
+    "            ###\n",
+    "            if i==len(df_x)-1: ##si al final todavia están\n",
+    "                if counter !=0:\n",
+    "                    finals.append([df_x.loc[i, 'tiempo'], df_x.loc[i, 'event'], df_x.loc[i, 'time_s']])\n",
+    "        ###\n",
+    "        ###\n",
+    "        if len(starts)>0:\n",
+    "            durations = np.array(finals)[:, -1] - np.array(starts)[:, -1]\n",
+    "            ###\n",
+    "            df_evnt = pd.DataFrame(starts)\n",
+    "            df_evnt.columns=['tiempo', 'event', 'time_s']\n",
+    "            df_evnt['event'] = event_type\n",
+    "            df_evnt['duration'] = durations\n",
+    "            df_evnt['subject'] = subject\n",
+    "            df_evnt['trick']=trick_\n",
+    "            df_subjects_risa.append(df_evnt)\n",
+    "            #print('append')\n",
+    "        #else:\n",
+    "            #print('nothing')\n",
+    "\n",
+    "\n",
+    "        \n",
+    "df_subjects_risa=pd.concat(df_subjects_risa)\n",
+    "df_subjects_risa.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3], dtype=int64)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_subjects_risa.trick.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
