--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -766,124 +766,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\David\\Anaconda3\\envs\\python3\\lib\\site-packages\\ipykernel_launcher.py:22: SettingWithCopyWarning: \n",
+      "C:\\Users\\David\\Anaconda3\\envs\\python3\\lib\\site-packages\\ipykernel_launcher.py:21: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tiempo</th>\n",
-       "      <th>event</th>\n",
-       "      <th>time_s</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>subject</th>\n",
-       "      <th>trick</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>00:36:46</td>\n",
-       "      <td>S</td>\n",
-       "      <td>2206</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>00:37:58</td>\n",
-       "      <td>S</td>\n",
-       "      <td>2278</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>00:38:20</td>\n",
-       "      <td>S</td>\n",
-       "      <td>2300</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>00:38:40</td>\n",
-       "      <td>S</td>\n",
-       "      <td>2320</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00:38:58</td>\n",
-       "      <td>S</td>\n",
-       "      <td>2338</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     tiempo event  time_s duration  subject  trick\n",
-       "0  00:36:46     S    2206        8        1      3\n",
-       "1  00:37:58     S    2278        8        1      3\n",
-       "2  00:38:20     S    2300        6        1      3\n",
-       "3  00:38:40     S    2320        8        1      3\n",
-       "4  00:38:58     S    2338       12        1      3"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "### Anotaciones de risa y sonrisa\n",
+    "df_subjects_risa=[]\n",
     "\n",
     "for T in trick_list:\n",
     "    df_risa = pd.read_excel(os.getcwd() + '\\\\ANOTACIONES3.xlsx', sheet_name= T )\n",
     "\n",
     "    list_columns_subjects = list(df_risa.columns)\n",
     "    list_columns_subjects.remove('Tiempo')\n",
-    "    list_columns_subjects=list_columns_subjects ## para ir comprobando, una a una, que no haya espacios vacíos!\n",
-    "\n",
-    "    df_subjects_risa=[]\n",
+    "    list_columns_subjects=list_columns_subjects ## para ir comprobando, una a una, que no haya espacios vacíos!    \n",
     "\n",
     "    for COL in list_columns_subjects:\n",
     "        event_type = COL[0]\n",
@@ -926,7 +833,7 @@
     "            df_evnt['event'] = event_type\n",
     "            df_evnt['duration'] = durations\n",
     "            df_evnt['subject'] = subject\n",
-    "            df_evnt['trick']=trick_\n",
+    "            df_evnt['trick']= int(T.split(' ')[-1]) \n",
     "            df_subjects_risa.append(df_evnt)\n",
     "            #print('append')\n",
     "        #else:\n",
@@ -940,20 +847,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3], dtype=int64)"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_subjects_risa.trick.unique()"
    ]
