--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -939,23 +939,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\David\\Anaconda3\\envs\\python3\\lib\\site-packages\\ipykernel_launcher.py:4: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    }
+   ],
+   "source": [
+    "##cambiando los S y los R de anotaciones2 por los de anotaciones3\n",
+    "df_subjects2 = df_subjects.reset_index(drop=True) \n",
+    "df1 = df_subjects2.drop(df_subjects2[(df_subjects2['event']=='R') | (df_subjects2['event']=='S') ].index)\n",
+    "df_comb = pd.concat([df1, df_subjects_risa])\n",
+    "df_comb = df_comb.sort_values(by=['subject', 'trick', 'time_s']) #primero por subject y, dentro de subject, por tiempo\n",
+    "df_comb = df_comb.reset_index(drop=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>duration</th>\n",
+       "      <th>event</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>tiempo</th>\n",
+       "      <th>time_s</th>\n",
+       "      <th>trick</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Se</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00:00:06</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00:00:10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>102</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00:00:12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>In</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00:00:32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>In</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00:01:02</td>\n",
+       "      <td>62</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([1, 2, 3, 4, 5, 6, 7, 8], dtype=int64)"
+       "  duration event  subject    tiempo  time_s  trick\n",
+       "0        1    Se        1  00:00:06       6      1\n",
+       "1        1    Si        1  00:00:10      10      1\n",
+       "2      102     N        1  00:00:12      12      1\n",
+       "3        1    In        1  00:00:32      32      1\n",
+       "4        1    In        1  00:01:02      62      1"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_subjects_risa.trick.unique()"
+    "df_comb.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
