--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -3085,16 +3085,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3103,6 +3103,7 @@
     "Subject = 1\n",
     "trick=3\n",
     "\n",
+    "####\n",
     "df_e = df.loc[(df['previous_event']=='Climax final') & (df['RT']<10) \n",
     "       & (df['subject']==Subject)  & (df['trick_']==trick)  & (df['event']=='S')   ]\n",
     "\n",
@@ -3111,7 +3112,13 @@
     "else:\n",
     "    duration_ = df_e.duration.sum()\n",
     "\n",
-    "duration_"
+    "#####\n",
+    "r1 = df.loc[(df['subject']==Subject)  & (df['trick']==trick)   ].r1.iloc[0]\n",
+    "r2 = df.loc[(df['subject']==Subject)  & (df['trick']==trick)   ].r2.iloc[0]\n",
+    "r3 = df.loc[(df['subject']==Subject)  & (df['trick']==trick)   ].r3.iloc[0]\n",
+    "r4 = df.loc[(df['subject']==Subject)  & (df['trick']==trick)   ].r4.iloc[0]\n",
+    "\n",
+    "results_mem.append([Subject, trick, duration_, r1, r2, r3, r4 ])\n"
    ]
   },
   {
