--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -2834,254 +2834,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>duration</th>\n",
-       "      <th>event</th>\n",
-       "      <th>subject</th>\n",
-       "      <th>tiempo</th>\n",
-       "      <th>time_s</th>\n",
-       "      <th>trick</th>\n",
-       "      <th>RT</th>\n",
-       "      <th>previous_event</th>\n",
-       "      <th>anticip_time</th>\n",
-       "      <th>next_event</th>\n",
-       "      <th>r1</th>\n",
-       "      <th>r2</th>\n",
-       "      <th>r3</th>\n",
-       "      <th>r4</th>\n",
-       "      <th>trick_</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>6</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1</td>\n",
-       "      <td>00:09:20</td>\n",
-       "      <td>560</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Climax final</td>\n",
-       "      <td>-12</td>\n",
-       "      <td>gag</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>4</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1</td>\n",
-       "      <td>00:12:20</td>\n",
-       "      <td>740</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Climax final</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Climax final</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   duration event  subject    tiempo  time_s  trick  RT previous_event  \\\n",
-       "60        6     S        1  00:09:20     560      3   4   Climax final   \n",
-       "74        4     S        1  00:12:20     740      3   0   Climax final   \n",
-       "\n",
-       "    anticip_time    next_event  r1 r2 r3 r4  trick_  \n",
-       "60           -12           gag   0  0  0  0       2  \n",
-       "74             0  Climax final   0  0  0  0       3  "
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.loc[(df['previous_event']=='Climax final') & (df['RT']<10) & (df['subject']==1)  & (df['trick']==3)  & (df['event']=='S')   ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-       "       18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34,\n",
-       "       35, 36, 37, 38], dtype=int64)"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.subject.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>duration</th>\n",
-       "      <th>event</th>\n",
-       "      <th>subject</th>\n",
-       "      <th>tiempo</th>\n",
-       "      <th>time_s</th>\n",
-       "      <th>trick</th>\n",
-       "      <th>RT</th>\n",
-       "      <th>previous_event</th>\n",
-       "      <th>anticip_time</th>\n",
-       "      <th>next_event</th>\n",
-       "      <th>r1</th>\n",
-       "      <th>r2</th>\n",
-       "      <th>r3</th>\n",
-       "      <th>r4</th>\n",
-       "      <th>trick_</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>4</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1</td>\n",
-       "      <td>00:12:20</td>\n",
-       "      <td>740</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Climax final</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Climax final</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>4</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1</td>\n",
-       "      <td>00:12:20</td>\n",
-       "      <td>740</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Climax final</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Climax final</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>2</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1</td>\n",
-       "      <td>00:12:28</td>\n",
-       "      <td>748</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Climax final</td>\n",
-       "      <td>-10</td>\n",
-       "      <td>inicio</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   duration event  subject    tiempo  time_s  trick  RT previous_event  \\\n",
-       "74        4     S        1  00:12:20     740      3   0   Climax final   \n",
-       "76        4     S        1  00:12:20     740      4   0   Climax final   \n",
-       "78        2     S        1  00:12:28     748      4   8   Climax final   \n",
-       "\n",
-       "    anticip_time    next_event  r1 r2 r3 r4  trick_  \n",
-       "74             0  Climax final   0  0  0  0       3  \n",
-       "76             0  Climax final   1  1  0  0       3  \n",
-       "78           -10        inicio   1  1  0  0       3  "
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "results_mem=[]\n",
+    "\n",
     "for Subject in df.subject.unique():\n",
     "    for trick in [1,2,3,4,5,6,7,8]:\n",
+    "        ####\n",
     "        df_e = df.loc[(df['previous_event']=='Climax final') & (df['RT']<10) \n",
-    "       & (df['subject']==Subject)  & (df['trick_']==trick)  & (df['event']=='S')   ]"
+    "               & (df['subject']==Subject)  & (df['trick_']==trick)  & (df['event']=='S')   ]\n",
+    "\n",
+    "        if len(df_e) == 0:\n",
+    "            duration_ = 0\n",
+    "        else:\n",
+    "            duration_ = df_e.duration.sum()\n",
+    "\n",
+    "        #####\n",
+    "        r1 = df.loc[(df['subject']==Subject)  & (df['trick']==trick)   ].r1.iloc[0]\n",
+    "        r2 = df.loc[(df['subject']==Subject)  & (df['trick']==trick)   ].r2.iloc[0]\n",
+    "        r3 = df.loc[(df['subject']==Subject)  & (df['trick']==trick)   ].r3.iloc[0]\n",
+    "        r4 = df.loc[(df['subject']==Subject)  & (df['trick']==trick)   ].r4.iloc[0]\n",
+    "        #####\n",
+    "        res_m = pd.DataFrame(np.array([[Subject, trick, duration_, r1, 1],\n",
+    "                           [Subject, trick, duration_, r2,2],\n",
+    "                           [Subject, trick, duration_, r3,3],\n",
+    "                           [Subject, trick, duration_, r4,4]]) )\n",
+    "        results_mem.append(res_m)\n",
+    "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subject</th>\n",
+       "      <th>trick</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>memory</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  subject trick duration  memory time\n",
+       "0       1     1        8       0    1\n",
+       "1       1     1        8       0    2\n",
+       "2       1     1        8       0    3\n",
+       "3       1     1        8       0    4\n",
+       "0       1     2        6       0    1"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_mem_S = pd.concat(results_mem)\n",
+    "results_mem_S.columns=['subject', 'trick', 'duration', 'memory', 'time']\n",
+    "results_mem_S = results_mem_S.loc[results_mem_S['memory']!='Miss']\n",
+    "results_mem_S['memory'] = results_mem_S['memory'].replace(['0', '1'], [0,1])\n",
+    "results_mem_S.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_mem_S.memory.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
