--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -2786,7 +2786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2820,7 +2820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2828,7 +2828,7 @@
     "\n",
     "COND_EV = ((df['event']=='S') | (df['event']=='R'))\n",
     "COND_EV = ((df['event']=='S') | (df['event']=='R'))\n",
-    "COND_EV = ((df['event']=='A')  | (df['event']=='a') | (df['event']=='AA') | (df['event']=='A+') | (df['event']=='AA+') | (df['event']=='a+')) \n",
+    "#COND_EV = ((df['event']=='A')  | (df['event']=='a') | (df['event']=='AA') | (df['event']=='A+') | (df['event']=='AA+') | (df['event']=='a+')) \n",
     "\n",
     "for Subject in df.subject.unique():\n",
     "    for trick in [1,2,3,4,5,6,7,8]:\n",
@@ -2857,7 +2857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2867,8 +2867,8 @@
     "results_mem_S['memory'] = results_mem_S['memory'].replace(['0', '1'], [0,1])\n",
     "results_mem_S.head()\n",
     "###results_mem_S.to_csv(\"memory_S.csv\")\n",
-    "results_mem_A_T1= results_mem_S.loc[results_mem_S['time']==0]\n",
-    "results_mem_A_T1.to_csv(\"memory_A_T1.csv\")"
+    "results_mem_S_T1= results_mem_S.loc[results_mem_S['time']==0]\n",
+    "results_mem_S_T1.to_csv(\"memory_S_T1.csv\")"
    ]
   },
   {
