--- a/statistics_R.ipynb
+++ b/statistics_R.ipynb
@@ -460,6 +460,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "boundary (singular) fit: see ?isSingular\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generalized linear mixed model fit by maximum likelihood (Adaptive\n",
+      "  Gauss-Hermite Quadrature, nAGQ = 10) [glmerMod]\n",
+      " Family: binomial  ( logit )\n",
+      "Formula: memory ~ duration + (1 | subject)\n",
+      "   Data: mydata\n",
+      "Control: glmerControl(optimizer = \"bobyqa\")\n",
+      "\n",
+      "     AIC      BIC   logLik deviance df.resid \n",
+      "   182.5    191.2    -88.3    176.5      133 \n",
+      "\n",
+      "Scaled residuals: \n",
+      "    Min      1Q  Median      3Q     Max \n",
+      "-1.4144 -1.3388  0.7318  0.7445  0.7640 \n",
+      "\n",
+      "Random effects:\n",
+      " Groups  Name        Variance Std.Dev.\n",
+      " subject (Intercept) 0        0       \n",
+      "Number of obs: 136, groups:  subject, 17\n",
+      "\n",
+      "Fixed effects:\n",
+      "            Estimate Std. Error z value Pr(>|z|)  \n",
+      "(Intercept) 0.538373   0.282774   1.904   0.0569 .\n",
+      "duration    0.008616   0.027979   0.308   0.7581  \n",
+      "---\n",
+      "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "convergence code: 0\n",
+      "boundary (singular) fit: see ?isSingular\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "m <- glmer(memory~duration +\n",
+    "    (1 | subject), data = mydata, family = binomial, control = glmerControl(optimizer = \"bobyqa\"),\n",
+    "    nAGQ = 10)\n",
+    "\n",
+    "#\n",
+    "print(summary(m, corr = FALSE))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "scrolled": false
@@ -724,6 +780,86 @@
     "    print(i)\n",
     "    print(summary(m, corr = FALSE))\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### más memoria en T1 por más duración de aplausos??\n",
+    "mydata = read.csv(\"memory_S_T1.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "boundary (singular) fit: see ?isSingular\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generalized linear mixed model fit by maximum likelihood (Adaptive\n",
+      "  Gauss-Hermite Quadrature, nAGQ = 10) [glmerMod]\n",
+      " Family: binomial  ( logit )\n",
+      "Formula: memory ~ duration + (1 | subject)\n",
+      "   Data: mydata\n",
+      "Control: glmerControl(optimizer = \"bobyqa\")\n",
+      "\n",
+      "     AIC      BIC   logLik deviance df.resid \n",
+      "   175.3    184.0    -84.7    169.3      133 \n",
+      "\n",
+      "Scaled residuals: \n",
+      "    Min      1Q  Median      3Q     Max \n",
+      "-1.7050 -1.0810  0.5865  0.7183  2.7744 \n",
+      "\n",
+      "Random effects:\n",
+      " Groups  Name        Variance  Std.Dev.\n",
+      " subject (Intercept) 6.807e-17 8.25e-09\n",
+      "Number of obs: 136, groups:  subject, 17\n",
+      "\n",
+      "Fixed effects:\n",
+      "            Estimate Std. Error z value Pr(>|z|)    \n",
+      "(Intercept)  1.06711    0.26041   4.098 4.17e-05 ***\n",
+      "duration    -0.06756    0.02645  -2.554   0.0107 *  \n",
+      "---\n",
+      "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "convergence code: 0\n",
+      "boundary (singular) fit: see ?isSingular\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "m <- glmer(memory~duration +\n",
+    "    (1 | subject), data = mydata, family = binomial, control = glmerControl(optimizer = \"bobyqa\"),\n",
+    "    nAGQ = 10)\n",
+    "\n",
+    "#\n",
+    "print(summary(m, corr = FALSE))"
    ]
   },
   {
