--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -3598,12 +3598,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_gags=df.loc[df['previous_event']=='gag']\n",
     "df_climaxfinal=df.loc[df['previous_event']=='Climax final' ]\n",
+    "df_miniclimax=df.loc[df['previous_event']=='Miniclimax' ]\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -3634,6 +3636,18 @@
     "    #df_count['previous_event']='gag'\n",
     "    frames.append(df_count)\n",
     "\n",
+    "    \n",
+    "for S in df_gags.subject.unique():\n",
+    "    df_s=df_miniclimax.loc[df_miniclimax['subject']==S]\n",
+    "    L = df_s.groupby(['event2']).sum()\n",
+    "    LL=L['duration']\n",
+    "    df_count = pd.DataFrame({'events': LL.index, 'durations': LL.values})\n",
+    "    df_count['subject']= S\n",
+    "    df_count['previous_event']='mini climax'\n",
+    "    #df_count = df_s.groupby(['event']).size().reset_index(name='count')\n",
+    "    #df_count['subject']= S\n",
+    "    #df_count['previous_event']='gag'\n",
+    "    frames.append(df_count)\n",
     "    \n",
     "    \n",
     "df_ = pd.concat(frames)"
@@ -3720,7 +3734,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(15,5))\n",
+    "\n",
+    "linares_plot(x='events', y='durations', order=df_climaxfinal.event2.unique(), \n",
+    "            df=df_.loc[ (df_['previous_event']=='Mini climax') ] , \n",
+    "            palette=['#285d9d'], CI=0.68,  fill_box=True, by_subj=True, subj_col='subject', \n",
+    "             reps=10, alpha_box=0.7, alpha=0.6,  point_size=3, leg=True, sep_axis=False)\n",
+    "\n",
+    "plt.gca().spines['right'].set_visible(False)  # aesthetics                                                                              # remove right spines\n",
+    "plt.gca().spines['top'].set_visible(False)                                                                                  # remove top spines\n",
+    "plt.gca().get_xaxis().tick_bottom()                                                                                         \n",
+    "plt.gca().get_yaxis().tick_left()\n",
+    "plt.gca().tick_params(direction='in') #direction\n",
+    "plt.xlabel('')\n",
+    "plt.ylabel('counts/subject')\n",
+    "plt.gca().set_ylim(0,150)\n",
+    "plt.gca().set_yticks([0,50,100,150])\n",
+    "plt.title('Climax final related labels');"
+   ]
   },
   {
    "cell_type": "code",
