--- a/analysis_event_centered.ipynb
+++ b/analysis_event_centered.ipynb
@@ -712,22 +712,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sonrisa Miniclimax\n",
-      "sonrisa Climax final\n",
-      "sonrisa gag\n",
-      "risa Miniclimax\n",
-      "risa Climax final\n",
-      "risa gag\n",
-      "aplauso Miniclimax\n",
-      "aplauso Climax final\n",
-      "aplauso gag\n"
+      "sonrisa Miniclimax\n"
      ]
     }
    ],
