--- a/analysis_event_centered.ipynb
+++ b/analysis_event_centered.ipynb
@@ -719,7 +719,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sonrisa Miniclimax\n"
+      "sonrisa Miniclimax\n",
+      "sonrisa Climax final\n",
+      "sonrisa gag\n"
      ]
     }
    ],
